--- a/templates/pybo/question_detail.html
+++ b/templates/pybo/question_detail.html
@@ -139,6 +139,7 @@
     <form action="{% url 'pybo:answer_create' question.id %}" method="post" class="my-3">
         {% csrf_token %}
         {% if form.errors %}
+        {% csrf_token %}
         <div class="alert alert-danger" role="alert">
         {% for field in form %}
             {% if field.errors %}
