--- a/templates/pybo/question_list.html
+++ b/templates/pybo/question_list.html
@@ -98,6 +98,7 @@
     <a href="{% url 'pybo:question_create' %}" class="btn btn-primary">질문 등록하기</a>
 </div>
 <form id="searchForm" method="get" action="{% url 'index' %}">
+    {% csrf_token %}
     <input type="hidden" id="kw" name="kw" value="{{ kw|default_if_none:'' }}">
     <input type="hidden" id="page" name="page" value="{{ page }}">
     <input type="hidden" id="so" name="so" value="{{ so }}">
