--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="img-fluid" src="{% static 'index.jpg' %}" alt="Responsive image">
+      <img class="img-fluid" src="{% static 'index.png' %}" alt="Responsive image">
 
       <div class="container">
         <div class="carousel-caption text-start">
