--- a/static/style.css
+++ b/static/style.css
@@ -15,3 +15,13 @@
       font-size: 3.5rem;
     }
 }
+#word-cloud{
+  height: 100vh;
+  width: 100vw;
+  margin: 0 auto;
+}
+
+body, html{
+  margin: 0;
+  padding: 0;
+}
