--- a/templates/index.html
+++ b/templates/index.html
@@ -75,7 +75,7 @@ function getLocation() {
   }
 }
 getLocation();
-series.data ={{message}};
+series.data = <div>{{message}}</div> ;
 
 series.dataFields.word = "tag";
 series.dataFields.value = "count";
