--- a/templates/pybo/question_form.html
+++ b/templates/pybo/question_form.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
     <h5 class="my-3 border-bottom pb-2">질문등록</h5>
-    <form method="post" class="post-form my-3">
+    <form method="post" class="post-form my-3" enctype="multipart/form-data">
         {% csrf_token %}
         <!-- 오류표시 Start -->
         {% if form.errors %}
@@ -28,6 +28,11 @@
             <label for="content">내용</label>
             <textarea class="form-control" name="content"
                       id="content" rows="10">{{ form.content.value|default_if_none:'' }}</textarea>
+                      {% csrf_token %}
+        </div>
+        <div class="form-group">
+            <label for="content">첨부파일</label>
+                <input type="file" name="imgs" multiple>
                       {% csrf_token %}
         </div>
         <button type="submit" class="btn btn-primary">저장하기</button>
